developerProject/force-app/main/default/objects/MappedOject__c/MappedOject__c.object-meta.xml
<CustomObject>
    <label>MappedOject</label>
    <nameField>
        <label>MappedOjectName</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MappedOjects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>