developerProject/force-app/main/default/objects/MappedOject__c/fields/fieldApi__c.field-meta.xml
<CustomField>
    <fullName>fieldApi__c</fullName>
    <label>fieldApi</label>
    <length>255</length>
    <type>Text</type>
</CustomField>