developerProject/force-app/main/default/objects/MappedOject__c/fields/isOnHold__c.field-meta.xml
<CustomField>
    <fullName>isOnHold__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isOnHold</label>
    <type>Checkbox</type>
</CustomField>