developerProject/force-app/main/default/objects/MappedOject__c/fields/objectApi__c.field-meta.xml
<CustomField>
    <fullName>objectApi__c</fullName>
    <label>objectApi</label>
    <length>255</length>
    <type>Text</type>
</CustomField>