developerProject/force-app/main/default/objects/MappedOject__c/fields/UpdateDate__c.field-meta.xml
<CustomField>
    <fullName>UpdateDate__c</fullName>
    <label>UpdateDate</label>
    <type>Date</type>
</CustomField>